# Multilingual-RAG-Copilot

./: .gitignore  README.md  app.py  docker-compose.airflow.yml  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.template
dags/: reindex_docs.py
scripts/: hash_password.py
src/mrc/: auth.py  ingest.py  llm.py  telemetry.py
src/multilingual_rag_copilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
